syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message FindMaxiumRequest {
    int32 number = 1;
}

message FindMaxiumResponse {
    int32 maxium = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) 
        returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    rpc FindMaxium(stream FindMaxiumRequest) returns (stream FindMaxiumResponse) {};
    // error handling
    // this RPC will throw an exception if the send number is negative
    // The error being send it of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}; 
}